[Mac] Avoid calling |sharingServiceNamed:| in share menu

1) For general efficiency and to avoid the leak mentioned in the linked
bug, compare share services via the previously exposed |name| method.
2) Now that |name| is available, restrict the temporary activity spawned
while sharing to the Reminders service, since that's the only one that
needs it.

Bug: 787955
Change-Id: I6d2a38f8b1cba3b3a3a4e1edb9c06408ae9f1c41
Reviewed-on: https://chromium-review.googlesource.com/791333
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519685}
Former-commit-id: f2d55a253ceb67d8c2218e35a449d7b4abc003df